--- a/src/main/java/com/sda/vetClinic/config/TODO
+++ b/src/main/java/com/sda/vetClinic/config/TODO
@@ -1,13 +1,13 @@
 
 TODO:
 
--OWNER: -view pets
-        -view appointments
-        -edit appointment's feedback/review/rate
+-OWNER: -edit appointment's feedback/review/rate
 
 -VET: -view appointments
       -take appointment
       -edit appointment's status
 
--auto owner's email & pet's id & vet's id
+-autowired owner's email & pet's id & vet's id
+-tests
+
 -validators
