auto owner's email, drop down pet's name, view pet + appointments of this pet

--- a/src/main/java/com/sda/vetClinic/config/TODO
+++ b/src/main/java/com/sda/vetClinic/config/TODO
@@ -7,7 +7,7 @@ TODO:
       -take appointment
       -edit appointment's status
 
--autowired owner's email & pet's id & vet's id
+-pet's id & vet's id
 -tests
 
 -validators
